# BitDrift

./: package.json  vite.config.js
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/torrent/: metainfo.rs
src-tauri/tests/: test.torrent
src/routes/: +layout.ts  +page.svelte
torrent/: Cargo.toml
torrent/src/: choker.rs  disk.rs  hash.rs  lib.rs  message.rs  metainfo.rs  peer.rs  peer_connection.rs  peer_stats.rs  piece.rs  piece_picker.rs  session.rs  torrent.rs  tracker.rs  types.rs
