[package]
name = "torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.27"
percent-encoding = "2.3.1"
reqwest = "0.12.20"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
sha1 = "0.10.6"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.15"
url = "2.5.4"

[dev-dependencies]
mockito = "1.7.0"
